# SoFixer

./: .gitignore  BUILD.md  CMakeLists.txt  ElfReader.cpp  ElfReader.h  ElfRebuilder.cpp  ElfRebuilder.h  ObElfReader.cpp  ObElfReader.h  SoFixer64Static  TESTS.md  a.out  elf.h  macros.h  main.cpp
cmd/: main.go
pkg/: sofixer.go
tests/: BaseSoFixer64
